trunk/tests/jastadd/negative/type_errors/L3/4_PredefinedProcPars4.ob
MODULE TestModule;
BEGIN
	WriteLn;      (* OK *)
	WriteLn(1)    (* NOT OK *)
END TestModule.
